Bug 122112 - GTK3: Notebookbar not displayed after closing the component from fullscreen
Summary: GTK3: Notebookbar not displayed after closing the component from fullscreen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
Depends on:
Blocks: GTK3 Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2018-12-14 16:51 UTC by Xisco Faulí
Modified: 2018-12-15 22:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-12-14 16:51:38 UTC
This issue is reproducible in GTK3 after https://cgit.freedesktop.org/libreoffice/core/commit/?id=3b6ee27e4bea1414042550f078f30fe3b7845a11 and https://cgit.freedesktop.org/libreoffice/core/commit/?id=a32059cfd1fa12eeb93b1ed3079ded0ce42deef6

Steps to reproduce:
1. Open LibreOffice
2. Open Writer
3. Change to Tabbed Notebookbar
4. Go to fullscreen
5. Close LibreOffice clicking on the X button
6. Open Writer

-> The notebookbar is no longer displayed. Same for other components

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 12e878d3b5e8a59079811c36b7c89e588266dd0e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Drew Jensen 2018-12-14 17:24:47 UTC
Using Ubuntu 18.04.1 and LO6.3 Alpha0 and a none SVG based icon set (Colibre) and GTK3 can confirm this behavior. (with x11 (vcl=gen) and GTK2, can not)
 
FYI if I switch the icon set to Colibre-svg things get worse and the system crashes when I click on the x to close the full screen window. I suppose that is worth a separate issue.
Comment 2 Xisco Faulí 2018-12-14 17:25:46 UTC
(In reply to Drew Jensen from comment #1)
> Using Ubuntu 18.04.1 and LO6.3 Alpha0 and a none SVG based icon set
> (Colibre) and GTK3 can confirm this behavior. (with x11 (vcl=gen) and GTK2,
> can not)
>  
> FYI if I switch the icon set to Colibre-svg things get worse and the system
> crashes when I click on the x to close the full screen window. I suppose
> that is worth a separate issue.

That's fixed with https://cgit.freedesktop.org/libreoffice/core/commit/?id=a32059cfd1fa12eeb93b1ed3079ded0ce42deef6
Comment 3 Xisco Faulí 2018-12-14 17:39:40 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/65189/
Comment 4 Commit Notification 2018-12-15 10:23:48 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/21b81b07b01e4482a80ced8dcdf48c480031c3c8%5E%21

tdf#122112 Hide the menu bar when the notebookbar is locked

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-12-15 22:41:46 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/c8a449f45c6d8d5223a721af74ff5888efffd8d7%5E%21

tdf#122112 Hide the menu bar when the notebookbar is locked

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.