tdf#122112 Hide the menu bar when the notebookbar is locked

Only reproducible with GTK3 (maybe KDE5?).
This way we ensure a uniformed behavior across vclplugins anyway

Change-Id: I6edd6a426cb206d797b504ddcdcef999f79fa3c8